Statistic sort, swagger editings
